# traditionalize-tool

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  pyproject.toml
src/traditionalize_tool/: __init__.py  cli.py
